fixed double scrolling, added header description

--- a/viewer/static/global.css
+++ b/viewer/static/global.css
@@ -3,6 +3,11 @@ body {
     font-family: 'Roboto', sans-serif;
     background-color: #1a1b1e;
     color: white;
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    width: 100%;
+    overflow: hidden;
 }
 
 .banner {
@@ -11,22 +16,28 @@ body {
     margin: 0;
     border-bottom: 1px solid #333;
     box-sizing: border-box;
+    cursor: pointer;
 }
 
 .banner h1 {
     padding: 0;
-    margin: 20px 0;
-    cursor: pointer;
+    margin: 20px 0 0 0;
+}
+
+.banner p {
+    padding: 0;
+    margin: 5px 0 20px 0;
+    color: #aaa;
 }
 
 .container {
-    padding: 10px 15px 10px 15px;
+    padding: 10px 15px 80px 15px;
     margin-left: auto;
     margin-right: auto;
     max-height: 100vh;
     overflow-y: auto;
     position: relative;
-    padding-bottom: 96px;
+    box-sizing: border-box;
 
     @media (min-width: 576px) {
         max-width: 540px;
